--- a/Day_01.ipynb
+++ b/Day_01.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuMcs2DOpcDsq1jjG2UJ7O"
+      "authorship_tag": "ABX9TyM39GPgr4qsAyfHTw+9oy1t",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/siddikisahil47/python/blob/main/Day_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "## Write a Program to input a welcome message and print it"
       ],
@@ -26,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +88,7 @@
         "id": "UDltLfF6U7iC",
         "outputId": "624311d0-ae56-402d-bc09-1533e6037b4e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +128,7 @@
         "id": "4H-XJ1nXWDOC",
         "outputId": "b8cf392f-6745-4da6-8926-4f004c404c3b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +172,7 @@
         "id": "k6Iq36P7Xd1q",
         "outputId": "6a2462a5-2578-45a7-e313-fa9e4422617f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +211,7 @@
         "id": "dGIg8ovoXS3D",
         "outputId": "9604fde8-5e08-439b-b2f7-dae032545751"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +249,7 @@
         "id": "m8ScA_0XZ0O7",
         "outputId": "3d004eea-9143-49b5-fac2-1dd6e5b48410"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +292,7 @@
         "id": "R5Cwc1CYZ2TD",
         "outputId": "ba70026b-dbe2-4127-bfa7-53df2e1a4d2a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,19 +306,126 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Write a Program to enter a small poem or poem verse and print it."
+      ],
       "metadata": {
         "id": "hcqrKoElZ9o6"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "poem = input(\"Enter Poem : \")\n",
+        "\n",
+        "print(\"Your entered POEM is : \")\n",
+        "print(poem)"
+      ],
       "metadata": {
-        "id": "Ml3puFwiZ9_C"
+        "id": "Ml3puFwiZ9_C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "685d3ffe-0334-4457-84a9-01fdc6ce5220"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter Poem : Twinkle Twinkle little star.\n",
+            "Your entered POEM is : \n",
+            "Twinkle Twinkle little star.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Write a program to input two number and swap them."
+      ],
+      "metadata": {
+        "id": "NUl4SMIrE8a0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = int(input(\"Enter first value : \"))\n",
+        "b = int(input(\"Enter Second value : \"))\n",
+        "\n",
+        "print(\"Original number are : \", a, b)\n",
+        "\n",
+        "a,b = b,a\n",
+        "\n",
+        "print(\"After Swap the number\", a , b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LTXkY7dWEy-Y",
+        "outputId": "731add34-6e77-494e-f483-fda76360f464"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first value : 4\n",
+            "Enter Second value : 8\n",
+            "Original number are :  4 8\n",
+            "After Swap the number 8 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Write a Program to input three numbers and swap them as this : 1st number becomes the 2nd number, 2nd number becomes the 3rd number and 3rd number becomes the first number.\n"
+      ],
+      "metadata": {
+        "id": "Mm2tVIQCGomA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = int(input(\"Enter first number : \"))\n",
+        "num2 = int(input(\"Enter second number : \"))\n",
+        "num3 = int(input(\"Enter third number : \"))\n",
+        "\n",
+        "print(\"Original number are\", num1, num2, \"&\", num3)\n",
+        "\n",
+        "num1, num2, num3 = num2, num3, num1\n",
+        "\n",
+        "print(\"After Swap the number are \", num1, num2, \"&\", num3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZUk4bG3tGo9s",
+        "outputId": "b169cd90-3e5a-4b6a-da78-3668e63bb5a9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number : 4\n",
+            "Enter second number : 8\n",
+            "Enter third number : 0\n",
+            "Original number are 4 8 & 0\n",
+            "After Swap the number are  8 0 & 4\n"
+          ]
+        }
+      ]
     }
   ]
 }
